--- a/index.html
+++ b/index.html
@@ -22,11 +22,6 @@
                 </ul>
             </div>
 
-            <div class="search">
-                <input class="srch" type="search" name="" placeholder="Type To text">
-                <a href="#"> <button class="btn">Search</button></a>
-            </div>
-
         </div> 
         <div class="content">
             <h1>University of Sri Jayawardenapura<br></h1>
@@ -35,31 +30,18 @@
                  capital of Sri Lanka.
                  It is renowned for its emphasis on social sciences, humanities, management,<br> and applied sciences.</p>
 
-                <button class="cn"><a href="#">JOIN US</a></button>
-
                 <div class="form">
                     <h2>Login Here</h2>
-                    <input type="email" name="email" placeholder="Enter Email Here">
+                    <input type="email" name="email" placeholder="Enter Registration Number Here">
                     <input type="password" name="" placeholder="Enter Password Here">
                     <button class="btnn"><a href="#">Login</a></button>
 
                     <p class="link">Don't have an account<br>
                     <a href="#">Sign up </a> here</a></p>
-                    <p class="liw">Log in with</p>
-
-                    <div class="icons">
-                        <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-                        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-                        <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-                        <a href="#"><ion-icon name="logo-google"></ion-icon></a>
-                        <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
-                    </div>
-
                 </div>
                     </div>
                 </div>
         </div>
     </div>
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
