--- a/index.html
+++ b/index.html
@@ -15,20 +15,18 @@
             <div class="menu">
                 <ul>
                     <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    
-                
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#footer">CONTACT</a></li>
                 </ul>
             </div>
 
         </div> 
         <div class="content">
             <h1>University of Sri Jayawardenapura<br></h1>
-            <p class="par">Established in 1959 as Vidyodaya University, the institution was later restructured and<br> renamed in 1978 
+            <div class="content-row"></div>
+              <p class="par">Established in 1959 as Vidyodaya University, the institution was later restructured and<br> renamed in 1978 
                 to reflect its location in Sri Jayewardenepura Kotte, the administrative<br>
                  capital of Sri Lanka.
-                 It is renowned for its emphasis on social sciences, humanities, management,<br> and applied sciences.</p>
+                 It is renowned for its emphasis on Computing, social sciences,<br> humanities, management,<br> and applied sciences.</p>
 
                 <div class="form">
                     <h2>Login Here</h2>
@@ -39,9 +37,17 @@
                     <p class="link">Don't have an account<br>
                     <a href="#">Sign up </a> here</a></p>
                 </div>
-                    </div>
-                </div>
+            </div>
         </div>
     </div>
+    </div>
+    <!-- Footer Section Start -->
+    <footer id="footer">
+        <div class="footer-content">
+            <h3>Contact Us</h3>
+            <p>University of Sri Jayewardenepura, Gangodawila, Nugegoda</p>
+            <p>E-mail : <a href="mailto:info@sjp.ac.lk">info@sjp.ac.lk</a></p>
+        </div>
+    </footer>
 </body>
 </html>
