--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="#footer">CONTACT</a></li>
                 </ul>
             </div>
@@ -35,7 +35,7 @@
                     <button class="btnn"><a href="#">Login</a></button>
 
                     <p class="link">Don't have an account<br>
-                    <a href="#">Sign up </a> here</a></p>
+                    <a href="signup.html">Sign up </a> here</a></p>
                 </div>
             </div>
         </div>
