--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
         <div class="signup-box">
             <h2>Sign Up</h2>
             <form action="home.html" method="get">
-                <input type="text" name="fullname" placeholder="Full Name" required>
+                <input type="text" name="Registration Number" placeholder="Registration Number" required>
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="password" name="password" placeholder="Password" required>
                 <input type="password" name="confirm" placeholder="Confirm Password" required>
