--- a/home.html
+++ b/home.html
@@ -19,10 +19,55 @@
     <button onclick="alert('You selected Software Engineering')">Software Engineering</button>
     <button onclick="alert('You selected Computer Science')">Computer Science</button>
 
-
-    <h4>Common Notifications!</h4>
-    <!--Common notifications can be added here, such as important dates, events, or announcements relevant to all students.-->
      
+      <!----CAMPUS NEWS SECTION----->
+    <div class="event">
+      <h2 class="heading">General Notifications</h2>
+      <div>
+        <marquee direction="up" scrollamount="12" style="height:340px;">
+          <ul>
+            <li>
+              <i>23-May-2025 :</i> The Faculty of Urban and Aquatic Bioresource held its orientation program for the new student intake on May 21, 2025, at the faculty premises. 
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 2
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 3
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 4
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 5
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 6
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 7
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 8
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 9 
+            </li>
+            <li>
+                 <i>01-April-2023 :</i> event 10
+            </li>
+            <li>
+                 <i>01-April-2023 :</i> event 11
+            </li>
+            <li>
+                 <i>01-April-2023 :</i> event 12
+            </li>
+          </ul>
+        </marquee>
+      </div>
+    </div>
+
+    
     <footer id="footer">
         <div class="footer-content">
             <h3>Contact Us</h3>
