--- a/signup.html
+++ b/signup.html
@@ -8,14 +8,11 @@
 <body>
     <div class="main">
         <div class="signup-box">
-            <h2>Sign Up</h2>
+            <h2>Enroll</h2>
             <form action="home.html" method="get">
                 <input type="text" name="Registration Number" placeholder="Registration Number" required>
-                <input type="email" name="email" placeholder="Email" required>
                 <input type="password" name="password" placeholder="Password" required>
-                <input type="password" name="confirm" placeholder="Confirm Password" required>
-                <button type="submit" class="btnn">Sign Up</button>
-                <p class="link">Already have an account? <a href="index.html">Sign In</a></p>
+                <button type="submit" class="btnn">Enroll Now</button>
             </form>
         </div>
     </div>
