Change admin page and rename enroll

--- a/admin.html
+++ b/admin.html
@@ -8,20 +8,17 @@
 </head>
 <body>
     <div class="header">
-    <div class="container">
-        <marquee> University of Sri Jayewardenepura. </marquee>
+       <marquee>University of Sri Jayewardenepura, Department of Software Engineering - Admin Panel</marquee>
     </div>
-    </div>
-    <div class="container">
-<!---LOGO SECTION ----->
-    <img src="LOGO.png" class="logo">
 <!----MENU SECTION----->
-    <nav>
-        <a href="#main">Home</a>
-        <a href="#about">About us</a>
-        <a href="#information">Information</a>
-        <a href="#footer">Contact us</a>
-    </nav>
+    <div class="container">
+        <img src="LOGO.png" class="logo" alt="Admin Logo">
+      <nav>
+       <a href="#main">Home</a>
+       <a href="#about">About us</a>
+       <a href="#information">Information</a>
+       <a href="#footer">Contact us</a>
+      </nav>
     </div>
 
 <!--- Main Section -->
@@ -31,7 +28,7 @@
         <div class="event">
         <h2 class="heading">Your notices</h2>
         <div>
-            <marquee direction="up" scrollamount="12" style="height:340px;">
+            
             <ul>
                 <li>
                     <i>23-May-2025 :</i> The Faculty of Urban and Aquatic Bioresource held its orientation program for the new student intake on May 21, 2025, at the faculty premises. 
@@ -82,7 +79,7 @@
                     <button>Edit</button>
                 </li>
             </ul>
-            </marquee>
+           
         </div>
         </div>
     </div>
