--- a/enroll.html
+++ b/enroll.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign Up - University of Sri Jayawardenapura</title>
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="enroll.css">
 </head>
 <body>
     <div class="main">
