--- a/student.html
+++ b/student.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Software Engineering dashboard</title>
-    <link rel="stylesheet" href="page2.css">
+    <link rel="stylesheet" href="student.css">
   </head>
   <body>
 
