Added notice board to student.html

--- a/student.html
+++ b/student.html
@@ -27,9 +27,9 @@
 
 <div class="main-section" id ="main" style="background:#f0f3fa">
   <div class="container">
-    <!----CAMPUS NEWS SECTION----->
+    <!----Academic Shedules & Deadlines----->
     <div class="event">
-      <h2 class="heading">Recent Events</h2>
+      <h2 class="heading">Academic Shedules & Deadlines</h2>
       <div>
         <marquee direction="up" scrollamount="9" style="height:340px;">
           <ul>
@@ -64,71 +64,84 @@
         </marquee>
       </div>
     </div>
-    <!-----CAMPUS NEWS SECTION----->
+    <!-----Examination Notices----->
     <div class="event campus-news">
-      <h2 class="heading">Campus News</h2>
+      <h2 class="heading">Examination Notices</h2>
       <div>
-        <ul>
-          <li>
-            <span class="campus-img">
-              <img src="image00.jpg">
-            </span>
-            <h2>USJP Ranked Among Top 3 Universities in Sri Lanka – 2025.</h2>
-            <h6>01.09.2024</h6>
-            <p>Webometrics Rankings, reflecting its excellence in academic performance, research output, and digital presence.</p>
-          </li>
-          <li>
-            <span class="event-img">
-              <img src="images/campus-2.png">
-            </span>
-            <h2>news2</h2>
-            <h6>15.01.2025</h6>
-            <p>...</p>
-          </li>
-          <li>
-            <span class="event-img">
-              <img src="images/campus-3.png">
-            </span>
-            <h2>news3</h2>
-            <h6>01.02.2025</h6>
-            <p>...</p>
-          </li>
-          <li>
-            <span class="event-img">
-              <img src="images/campus-4.png">
-            </span>
-            <h2>news4</h2>
-            <h6>14.04.2025</h6>
-            <p>...</p>
-          </li>
-        </ul>
+        <marquee direction="up" scrollamount="9" style="height:340px;">
+          <ul>
+            <li>
+              <i>23-May-2025 :</i> The Faculty of Urban and Aquatic Bioresource held its orientation program for the new student intake on May 21, 2025, at the faculty premises. 
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 2
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 3
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 4
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 5
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 6
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 7
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 8
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event9 
+            </li>
+          </ul>
+        </marquee>
       </div>
     </div>
-    <!------EVENT SECTION------>
+    <!------Club and Event Announcements------>
     <div class="event">
-      <h2 class="heading">College Event Calender</h2>
+      <h2 class="heading">Club and Event Announcements</h2>
       <div>
-        <ul>
-          <li>
-            <span class="event-date">11 <br> April </span>International Research Conference (IRCUSJ) 2025
-          </li>
-          <li>
-            <span class="event-date">19 <br> May </span> Innovate Sri Lanka – Student Startup Showcase
-          </li>
-          <li>
-            <span class="event-date">21 <br> June </span> USJP Career Fair 2025
-          </li>
-          <li>
-            <span class="event-date">17 <br> July </span>Green Week – Sustainability and Environmental Awareness Campaign
-          </li>
-          <li>
-            <span class="event-date">31 <br> Aug </span> Inter-Faculty Sports Championship
-          </li>
-        </ul>
+     <marquee direction="up" scrollamount="9" style="height:340px;">
+          <ul>
+            <li>
+              <i>23-May-2025 :</i> The Faculty of Urban and Aquatic Bioresource held its orientation program for the new student intake on May 21, 2025, at the faculty premises. 
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 2
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 3
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 4
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 5
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 6
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 7
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event 8
+            </li>
+            <li>
+              <i>01-April-2023 :</i> event9 
+            </li>
+          </ul>
+        </marquee>
       </div>
     </div>
   </div>
 </div>
+
+
 <!-----ABOUT US SECTION------>
 <div class="main-section" id ="about">
   <div class="container about-us">
