--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                     <input type="email" name="email" placeholder="Enter Registration Number Here">
                     <input type="password" name="" placeholder="Enter Password Here">
                     <button class="btnn"><a href="#">Login</a></button>
+                    <br>
+                    <p class="link">Did not enroll? <a href="enroll.html">Enroll</a></p>
                 </div>
             </div>
         </div>
