--- a/st_info.html
+++ b/st_info.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="container-box">
-        <form action="home.html" method="get">
+        <form action="" method="POST">
             <h2>Registration</h2>
             <label for="name">Name</label>
             <input type="name" id="name" name="name" required>
