--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>University of Sri Jayawardenapura</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>University of Sri Jayewardenepura</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-    <div class="main">
-        <div class="navbar">
-            <div class="icon">
-                <h2 class="logo">Learning Management System</h2>
-            </div>
-
-            <div class="menu">
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="#footer">CONTACT US</a></li>
-                </ul>
-            </div>
-
-        </div> 
-        <div class="content">
-            <h1>University of Sri Jayawardenapura<br></h1>
-            <div class="content-row"></div>
-              <p class="par">Established in 1959 as Vidyodaya University, the institution was later restructured and<br> renamed in 1978 
-                to reflect its location in Sri Jayewardenepura Kotte, the administrative<br>
-                 capital of Sri Lanka.
-                 It is renowned for its emphasis on Computing, social sciences,<br> humanities, management,<br> and applied sciences.</p>
-
-                <div class="form">
-                    <h2>Login Here</h2>
-                    <input type="email" name="email" placeholder="Enter Registration Number Here">
-                    <input type="password" name="" placeholder="Enter Password Here">
-                    <button class="btnn"><a href="#">Login</a></button>
-                </div>
-            </div>
-        </div>
+  <div class="main">
+    <div class="navbar">
+      <div class="icon">
+        <h2 class="logo">Learning Management System</h2>
+      </div>
+      <div class="menu">
+        <ul>
+          <li><a href="index.php">HOME</a></li>
+          <li><a href="#footer">CONTACT US</a></li>
+        </ul>
+      </div>
     </div>
+
+    <div class="content">
+      <h1>University of Sri Jayewardenepura</h1>
+      <p class="par">
+        Established in 1959 as Vidyodaya University... <br>
+        It is renowned for Computing, Management, Humanities, and Sciences.
+      </p>
+
+      <div class="form">
+        <h2>Login Here</h2>
+        <form action="index.php" method="post">
+          <input type="text" name="username" placeholder="Enter Username" required>
+          <input type="password" name="password" placeholder="Enter Password" required>
+          <button class="btnn" type="submit" name="btnn">Login</button>
+        </form>
+      </div>
     </div>
-    <!-- Footer Section Start -->
-    <footer id="footer">
-        <div class="footer-content">
-            <h3>Contact Us</h3>
-            <p>University of Sri Jayewardenepura, Gangodawila, Nugegoda</p>
-            <p>E-mail : <a href="mailto:info@sjp.ac.lk">info@sjp.ac.lk</a></p>
-        </div>
-    </footer>
+  </div>
+
+  <footer id="footer">
+    <div class="footer-content">
+      <h3>Contact Us</h3>
+      <p>University of Sri Jayewardenepura, Gangodawila, Nugegoda</p>
+      <p>Email: <a href="mailto:info@sjp.ac.lk">info@sjp.ac.lk</a></p>
+    </div>
+  </footer>
+
 </body>
 </html>
