Designed index page and student

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-<<<<<<< HEAD
   <div class="main">
     <div class="navbar">
       <div class="icon">
@@ -20,40 +19,6 @@
           <li><a href="#footer">CONTACT US</a></li>
         </ul>
       </div>
-=======
-    <div class="main">
-        <div class="navbar">
-            <div class="icon">
-                <h2 class="logo">Learning Management System</h2>
-            </div>
-
-            <div class="menu">
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="#footer">CONTACT US</a></li>
-                </ul>
-            </div>
-
-        </div> 
-        <div class="content">
-            <h1>University of Sri Jayawardenapura<br></h1>
-            <div class="content-row"></div>
-              <p class="par">Established in 1959 as Vidyodaya University, the institution was later restructured and<br> renamed in 1978 
-                to reflect its location in Sri Jayewardenepura Kotte, the administrative<br>
-                 capital of Sri Lanka.
-                 It is renowned for its emphasis on Computing, social sciences,<br> humanities, management,<br> and applied sciences.</p>
-
-                <div class="form">
-                    <h2>Login Here</h2>
-                    <input type="email" name="email" placeholder="Enter Registration Number Here">
-                    <input type="password" name="" placeholder="Enter Password Here">
-                    <button class="btnn"><a href="#">Login</a></button>
-                    <br>
-                    <p class="link">Did not enroll? <a href="enroll.html">Enroll</a></p>
-                </div>
-            </div>
-        </div>
->>>>>>> b75bf8df91b220f873f54973e239004495bfd03b
     </div>
 
     <div class="content">
@@ -68,7 +33,7 @@
         <form action="index.php" method="post">
           <input type="text" name="username" placeholder="Enter Username" required>
           <input type="password" name="password" placeholder="Enter Password" required>
-          <button class="btnn" type="submit" name="btnn">Login</button>
+          <button class="btn" type="submit" name="btnn">Login</button>
         </form>
       </div>
     </div>
