Add notice management system and update admin/ student interfaces. - Created new notice submission form (HTML/CSS) - Modified admin and student pages

--- a/admin.html
+++ b/admin.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="header">
-       <marquee>University of Sri Jayewardenepura, Department of Software Engineering - Admin Panel</marquee>
+       <marquee>University of Sri Jayewardenepura</marquee>
     </div>
 <!----MENU SECTION----->
     <div class="container">
-        <img src="LOGO.png" class="logo" alt="Admin Logo">
+        <img src="logo.jpg" class="logo" alt="Admin Logo">
       <nav>
        <a href="#main">Home</a>
        <a href="#about">About us</a>
