--- a/student.html
+++ b/student.html
@@ -14,7 +14,7 @@
 </div>
 <div class="container">
   <!---LOGO SECTION ----->
-  <img src="LOGO.png" class="logo">
+  <img src="logo.jpg" class="logo">
   <!----MENU SECTION----->
   <nav>
     <a href="#main">Home</a>
