--- a/enroll.html
+++ b/enroll.html
@@ -9,8 +9,9 @@
     <div class="main">
         <div class="signup-box">
             <h2>Enroll</h2>
-            <form action="home.html" method="get">
-                <input type="text" name="Registration Number" placeholder="Registration Number" required>
+              <form action="Admin_Info.html" method="get">
+                <label for="staffId">Registration Number (Staff ID):</label>
+                <input type="text" id="staffId" name="staffId" required>
                 <input type="password" name="password" placeholder="Password" required>
                 <button type="submit" class="btnn">Enroll Now</button>
             </form>
