--- a/student.html
+++ b/student.html
@@ -9,7 +9,7 @@
     <!--Top Header-->
 <div class="header">
   <div class="container">
-    <marquee> University of Sri Jayewardenepura, Department of Software Engineering. </marquee>
+    <marquee> University of Sri Jayewardenepura</marquee>
   </div>
 </div>
 <div class="container">
