Add enroll.php and update related files

--- a/st_info.html
+++ b/st_info.html
@@ -21,13 +21,12 @@
                 <option value="information_system">Information System</option>
             </select>
 
-            <label for="year">Year</label>
-            <select id="year" name="year">
-                <option value="select_year" selected disabled hidden ></option>
-                <option value="1st">1st Year</option>
-                <option value="2nd">2nd Year</option>
-                <option value="3rd">3rd Year</option>
-                <option value="4th">4th Year</option>
+            <label for="">batch</label>
+            <select id="batch" name="batch">
+                <option value="select_batch" selected disabled hidden ></option>
+                <option value="1st">2022 batch</option>
+                <option value="2nd">2023 batch</option>
+                <option value="3rd">2024 batch</option>
             </select>
                 
             <label for="email">Email</label>
