--- a/enroll.html
+++ b/enroll.html
@@ -9,10 +9,9 @@
     <div class="main">
         <div class="signup-box">
             <h2>Enroll</h2>
-              <form action="Admin_Info.html" method="get">
-                <label for="staffId">Registration Number (Staff ID):</label>
-                <input type="text" id="staffId" name="staffId" required>
-                <input type="password" name="password" placeholder="Password" required>
+              <form action="enroll.php" method="post">
+                <input type="text" id="username" name="username" placeholder="username">
+                <input type="password" id="password" name="password" placeholder="Password" required>
                 <button type="submit" class="btnn">Enroll Now</button>
             </form>
         </div>
