--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="menu">
         <ul>
-          <li><a href="index.php">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="#footer">CONTACT US</a></li>
         </ul>
       </div>
