Update admin page and styles - by Pasindu

--- a/admin.html
+++ b/admin.html
@@ -24,59 +24,71 @@
 <!--- Main Section -->
     <div class="main">
         <h1>Admin Section</h1>
-        <button class="button1">Add a new notice</button>
+        <a href="./Add Notice.html">
+        <button class="button1">Add a new notice</button> </a>
         <div class="event">
         <h2 class="heading">Your notices</h2>
         <div>
-            
             <ul>
                 <li>
                     <i>23-May-2025 :</i> The Faculty of Urban and Aquatic Bioresource held its orientation program for the new student intake on May 21, 2025, at the faculty premises. 
                     <button>Edit</button>
+                    <button>Delete</button>
                 </li>
                 <li>
                     <i>01-April-2023 :</i> Notice 2
                     <button>Edit</button>
+                    <button>Delete</button>
                 </li>
                 <li>
                     <i>01-April-2023 :</i> Notice 3
                     <button>Edit</button>
+                    <button>Delete</button>
                 </li>
                 <li>
                     <i>01-April-2023 :</i> Notice 4
                     <button>Edit</button>
+                    <button>Delete</button>
                 </li>
                 <li>
                     <i>01-April-2023 :</i> Notice 5
-                    <button>Edit</button>             
+                    <button>Edit</button>
+                    <button>Delete</button>             
                 </li>
                 <li>
                     <i>01-April-2023 :</i> Notice 6
                     <button>Edit</button>
+                    <button>Delete</button>
                 </li>
                 <li>
                     <i>01-April-2023 :</i> Notice 7
                     <button>Edit</button>
+                    <button>Delete</button>
                 </li>
                 <li>
                     <i>01-April-2023 :</i> Notice 8
                     <button>Edit</button>
+                    <button>Delete</button>
                 </li>
                 <li>
                     <i>01-April-2023 :</i> Notice 9 
                     <button>Edit</button>
+                    <button>Delete</button>
                 </li>
                 <li>
                     <i>01-April-2023 :</i> Notice 10
                     <button>Edit</button>
+                    <button>Delete</button>
                 </li>
                 <li>
                     <i>01-April-2023 :</i> Notice 11
                     <button>Edit</button>
+                    <button>Delete</button>
                 </li>
                 <li>
                     <i>01-April-2023 :</i> Notice 12
                     <button>Edit</button>
+                    <button>Delete</button>
                 </li>
             </ul>
            
