--- a/Changepassword.html
+++ b/Changepassword.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Change Password</title>
+    <title>Change Password - University of Sri Jayawardenapura</title>
     <link rel="stylesheet" href="ChangePassword.css">
 </head>
 
@@ -42,6 +42,16 @@
             }
         });
     </script>
+
+<!---Footer section--->
+
+<footer id="footer">
+    <div class="footer-content">
+        <h3>Contact Us</h3>
+        <p>University of Sri Jayewardenepura, Gangodawila, Nugegoda</p>
+        <p>E-mail : <a href="mailto:info@sjp.ac.lk">info@sjp.ac.lk</a></p>
+    </div>
+</footer>
 </body>
 
 </html>
