--- a/st_info.html
+++ b/st_info.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Create Account - University of Sri Jayawardenapura</title>
-    <link rel="stylesheet" href="information.css">
+    <title>Student Information Page - University of Sri Jayawardenapura</title>
+    <link rel="stylesheet" href="st_info.css">
 </head>
 <body>
     <div class="container">
@@ -42,5 +42,16 @@
         </form>
         </div>
     </div>
+
+<!---Footer section--->
+
+<footer id="footer">
+    <div class="footer-content">
+        <h3>Contact Us</h3>
+        <p>University of Sri Jayewardenepura, Gangodawila, Nugegoda</p>
+        <p>E-mail : <a href="mailto:info@sjp.ac.lk">info@sjp.ac.lk</a></p>
+    </div>
+</footer>
+
 </body>
 </html>
