--- a/staff_Info.html
+++ b/staff_Info.html
@@ -2,14 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Create Account - University of Sri Jayawardenapura</title>
-    <link rel="stylesheet" href="Info.css">
-    </style>
+    <title>Staff Inromation Page - University of Sri Jayawardenapura</title>
+    <link rel="stylesheet" href="staff_Info.css">
 </head>
 <body>
     <div class="container">
         <div class="container-box">
-        <form action="Admin_Info.php" method="post">
+        <form action="staff_Info.php" method="post">
             <h2>Registration</h2>
 
             <!-- Hidden staffId field from enroll.html -->
@@ -32,5 +31,15 @@
         </form>
         </div>
     </div>
+
+    <!---Footer section--->
+
+    <footer id="footer">
+        <div class="footer-content">
+            <h3>Contact Us</h3>
+            <p>University of Sri Jayewardenepura, Gangodawila, Nugegoda</p>
+            <p>E-mail : <a href="mailto:info@sjp.ac.lk">info@sjp.ac.lk</a></p>
+        </div>
+    </footer>
 </body>
 </html>
