--- a/staff_home.html
+++ b/staff_home.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>admin</title>
-    <link rel="stylesheet" href="admin1.css">
+    <title>Staff Home Page - University of Sri Jayawardenapura</title>
+    <link rel="stylesheet" href="staff_home.css">
 </head>
 <body>
     <div class="header">
@@ -15,8 +15,6 @@
         <img src="logo.jpg" class="logo" alt="Admin Logo">
       <nav>
        <a href="#main">Home</a>
-       <a href="#about">About us</a>
-       <a href="#information">Information</a>
        <a href="#footer">Contact us</a>
       </nav>
     </div>
