--- a/student_home.html
+++ b/student_home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Software Engineering dashboard</title>
-    <link rel="stylesheet" href="student.css">
+    <title>Student Home Page - University of Sri Jayawardenapura</title>
+    <link rel="stylesheet" href="student_home.css">
   </head>
   <body>
 
@@ -131,7 +131,7 @@
     <div class="event">
       <h2 class="heading">University Ranking</h2>
       <div>
-        <img src="ranking.jpeg">
+        <img src="ranking.jpg">
       </div>
     </div>
   </div>
