--- a/Add Notice.html
+++ b/Add Notice.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Notice Submission Form</title>
+        <title>Notice Submission Form - University of Sri Jayawardenapura</title>
         <link rel="stylesheet" href="Add Notice.css">
     </head>
     <body>
@@ -19,13 +19,11 @@
             <!---Menu section--->
             <nav>
                 <a href="#main">Home</a>
-                <a href="#about">About us</a>
-                <a href="#information">Information</a>
                 <a href="#footer">Contact us</a>
             </nav>
         </div>
 
-        <div class="main-section" id ="main" style="background:#d4eef8">
+        <div class="main-section" id ="main">
             <div class="container">
 
              <!--Form section-->
@@ -84,7 +82,7 @@
         <footer id="footer">
             <div class="footer-content">
                 <h3>Contact Us</h3>
-                <p>University of Sri Jayewardenepura, Gangodawila, Nugegoda</p>
+                <p>University of Sri Jayewardenepura,Gangodawila, Nugegoda</p>
                 <p>E-mail : <a href="mailto:info@sjp.ac.lk">info@sjp.ac.lk</a></p>
             </div>
         </footer>
