--- a/enroll.html
+++ b/enroll.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sign Up - University of Sri Jayawardenapura</title>
+    <title>Enroll page - University of Sri Jayawardenapura</title>
     <link rel="stylesheet" href="enroll.css">
 </head>
 <body>
@@ -10,12 +10,15 @@
         <div class="signup-box">
             <h2>Enroll</h2>
               <form action="enroll.php" method="post">
-                <input type="text" id="username" name="username" placeholder="username">
+                <input type="text" id="username" name="username" placeholder="Username">
                 <input type="password" id="password" name="password" placeholder="Password" required>
                 <button type="submit" class="btnn">Enroll Now</button>
             </form>
         </div>
     </div>
+
+<!---Footer section--->
+
     <footer id="footer">
         <div class="footer-content">
             <h3>Contact Us</h3>
