--- a/profile_page/student-profile.html
+++ b/profile_page/student-profile.html
@@ -34,7 +34,7 @@
                 <span class="detail-value" id="student-reg">CS20231001</span>
             </div>
             <div class="detail-row">
-                <span class="detail-label">Email:</span>
+                <span class="detail-label">E-mail:</span>
                 <span class="detail-value" id="student-email">john.doe@university.edu</span>
             </div>
             <div class="detail-row">
@@ -42,7 +42,7 @@
                 <span class="detail-value" id="student-index">15001001</span>
             </div>
             <div class="detail-row">
-                <span class="detail-label">Status :</span>
+                <span class="detail-label">Status:</span>
                 <span class="detail-value" id="staff-email">Enrolled</span>
             </div>
             
