Done changes and common styles for all

--- a/enroll.html
+++ b/enroll.html
@@ -7,6 +7,17 @@
 </head>
 <body>
     <div class="main">
+        <div class="navbar">
+      <div class="icon">
+        <h2 class="logo">Learning Management System</h2>
+      </div>
+      <div class="menu">
+        <ul>
+          <li><a href="login.html">HOME</a></li>
+          <li><a href="#footer">CONTACT US</a></li>
+        </ul>
+      </div>
+    </div>
         <div class="signup-box">
             <h2>Enroll</h2>
               <form action="enroll.php" method="post">
