--- a/login.html
+++ b/login.html
@@ -34,29 +34,19 @@
           <input type="text" name="username" placeholder="Enter Username" required>
           <input type="password" name="password" placeholder="Enter Password" required>
           <button class="btn" type="submit" name="btnn">Login</button>
-          <p>Lost Password?</p>
-        </form>
-      </div>
-      <div class="form1">
-        <h2>Still not enrolled?</h2>
-        <br>
-        <form action="enroll.php" method="post">
-          <button class="btn" type="submit" name="enroll_btnn">Enroll</button>
-        </form>
-      </div>
+          <a href="enroll.html">Enroll ME!</a>
         </form>
       </div>
     </div>
   </div>
 
 <!---Footer section--->  
-
-  <footer id="footer">
-    <div class="footer-content">
-      <h3>Contact Us</h3>
-      <p>University of Sri Jayewardenepura, Gangodawila, Nugegoda</p>
-      <p>Email: <a href="mailto:info@sjp.ac.lk">info@sjp.ac.lk</a></p>
-    </div>
-  </footer>
+ <footer id="footer">
+        <div class="footer-content">
+            <h3>Contact Us</h3>
+            <p>University of Sri Jayewardenepura, Gangodawila, Nugegoda</p>
+            <p>E-mail : <a href="mailto:info@sjp.ac.lk">info@sjp.ac.lk</a></p>
+        </div>
+    </footer>
 </body>
 </html>
