--- a/st_info.html
+++ b/st_info.html
@@ -6,6 +6,18 @@
     <link rel="stylesheet" href="st_info.css">
 </head>
 <body>
+    <div class="main">
+    <div class="navbar">
+      <div class="icon">
+        <h2 class="logo">Learning Management System</h2>
+      </div>
+      <div class="menu">
+        <ul>
+          <li><a href="login.html">HOME</a></li>
+          <li><a href="#footer">CONTACT US</a></li>
+        </ul>
+      </div>
+    </div>
     <div class="container">
         <div class="container-box">
         <form action="" method="POST">
