--- a/Changepassword.html
+++ b/Changepassword.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+    <div class="main">
+    <div class="navbar">
+      <div class="icon">
+        <h2 class="logo">Learning Management System</h2>
+      </div>
+      <div class="menu">
+        <ul>
+          <li><a href="login.html">HOME</a></li>
+          <li><a href="#footer">CONTACT US</a></li>
+        </ul>
+      </div>
+    </div>
     <div class="change-password-container">
         <h2>Change Password</h2>
         <form id="changePasswordForm" autocomplete="off">
@@ -28,6 +40,13 @@
             <div class="message" id="message"></div>
         </form>
     </div>
+    <footer id="footer">
+    <div class="footer-content">
+        <h3>Contact Us</h3>
+        <p>University of Sri Jayewardenepura, Gangodawila, Nugegoda</p>
+        <p>E-mail : <a href="mailto:info@sjp.ac.lk">info@sjp.ac.lk</a></p>
+    </div>
+</footer>
     <script>
         document.getElementById('changePasswordForm').addEventListener('submit', function (e) {
             e.preventDefault();
@@ -43,15 +62,6 @@
         });
     </script>
 
-<!---Footer section--->
 
-<footer id="footer">
-    <div class="footer-content">
-        <h3>Contact Us</h3>
-        <p>University of Sri Jayewardenepura, Gangodawila, Nugegoda</p>
-        <p>E-mail : <a href="mailto:info@sjp.ac.lk">info@sjp.ac.lk</a></p>
-    </div>
-</footer>
 </body>
-
 </html>
