--- a/Changepassword.html
+++ b/Changepassword.html
@@ -16,7 +16,7 @@
       </div>
       <div class="menu">
         <ul>
-          <li><a href="login.html">HOME</a></li>
+          <li><a href="student-profile.html">HOME</a></li>
           <li><a href="#footer">CONTACT US</a></li>
         </ul>
       </div>
