--- a/student-profile.html
+++ b/student-profile.html
@@ -12,7 +12,7 @@
     <div class="background"></div>
 
     <!-- Logo at the top-right -->
-    <img src="../logo.jpg" alt="Logo" class="logo">
+    <img src="logo.jpg" alt="Logo" class="logo">
 
     <div class="profile-container">
         <header class="profile-header">
