Updated all to mobile responsive add user icon

--- a/staff_home.html
+++ b/staff_home.html
@@ -11,13 +11,14 @@
        <marquee>University of Sri Jayewardenepura</marquee>
     </div>
 <!----MENU SECTION----->
-    <div class="container">
-        <img src="logo.jpg" class="logo" alt="Admin Logo">
-      <nav>
+<div class="container">
+    <img src="logo.jpg" class="logo" alt="Admin Logo">
+    <nav>
        <a href="#main">Home</a>
        <a href="#footer">Contact us</a>
-      </nav>
-    </div>
+       <a href="staff-profile.html"><img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="user-icon" alt="User Profile"></a>
+    </nav>
+</div>
 
 <!--- Main Section -->
     <div class="main">
