--- a/Add Notice.html
+++ b/Add Notice.html
@@ -12,13 +12,15 @@
             <marquee> University of Sri Jayewardenepura. </marquee>
         </div>
         
-        <div class="menu-bar">
-            <img src="logo.jpg" alt="University Logo" class="logo">
-            <nav>
-                <a href="staff_home.html">Home</a>
-                <a href="#footer">Contact us</a>
-            </nav>
+        <div class="container">
+          <img src="logo.jpg" class="logo" alt="Admin Logo">
+          <nav>
+            <a href="#main">Home</a>
+            <a href="#footer">Contact us</a>
+            <a href="staff-profile.html"><img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="user-icon" alt="User Profile"></a>
+          </nav>
         </div>
+
 
         <div class="main-section" id ="main">
             <div class="container">
