--- a/enroll.html
+++ b/enroll.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Enroll page - University of Sri Jayawardenapura</title>
     <link rel="stylesheet" href="enroll.css">
