--- a/st_info.html
+++ b/st_info.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Information Page - University of Sri Jayawardenapura</title>
     <link rel="stylesheet" href="st_info.css">
 </head>
