--- a/staff_Info.html
+++ b/staff_Info.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Staff Inromation Page - University of Sri Jayawardenapura</title>
     <link rel="stylesheet" href="staff_Info.css">
 </head>
