student-profile backend

--- a/Changepassword.html
+++ b/Changepassword.html
@@ -50,15 +50,63 @@
     <script>
         document.getElementById('changePasswordForm').addEventListener('submit', function (e) {
             e.preventDefault();
-            var newPassword = document.getElementById('newPassword').value;
-            var confirmPassword = document.getElementById('confirmPassword').value;
-            var message = document.getElementById('message');
+
+            const currentPassword = document.getElementById('currentPassword').value;
+            const newPassword = document.getElementById('newPassword').value;
+            const confirmPassword = document.getElementById('confirmPassword').value;
+            const message = document.getElementById('message');
+
+            // Client-side validation
             if (newPassword !== confirmPassword) {
+                message.style.color = "red";
                 message.textContent = "New passwords do not match.";
-            } else {
-                message.style.color = "green";
-                message.textContent = "Password changed successfully (demo only).";
+                return;
             }
+
+            if (newPassword.length < 8) {
+                message.style.color = "red";
+                message.textContent = "Password must be at least 8 characters long.";
+                return;
+            }
+
+            // Show loading message
+            message.style.color = "white";
+            message.textContent = "Changing password...";
+
+            // Create FormData object
+            const formData = new FormData();
+            formData.append('currentPassword', currentPassword);
+            formData.append('newPassword', newPassword);
+            formData.append('confirmPassword', confirmPassword);
+
+            // Send AJAX request to PHP
+            fetch('ChangePassword.php', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    message.style.color = "green";
+                    message.textContent = data.message;
+                    
+                    // Clear form fields
+                    document.getElementById('changePasswordForm').reset();
+                    
+                    // Redirect to profile page after 2 seconds
+                    setTimeout(() => {
+                        window.location.href = 'login.html'; 
+                    }, 1000);
+                } else {
+                    message.style.color = "red";
+                    message.textContent = data.message;
+                }
+            })
+            .catch(error => {
+                message.style.color = "red";
+                message.textContent = "An error occurred. Please try again.";
+                console.error('Error:', error);
+            });
         });
     </script>
 
